--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </a>
         <nav class="cabecalho__nav">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="lancamento.html">Lançamento</a>
             <a href="#">Contato</a>
         </nav>
