--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
             </div>
         </a>
         <nav class="cabecalho__nav">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="lancamento.html">Lançamento</a>
             <a href="contato.html">Contato</a>
         </nav>
