--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="cabecalho__nav">
             <a href="index.html">Home</a>
             <a href="lancamento.html">Lançamento</a>
-            <a href="#">Contato</a>
+            <a href="contato.html">Contato</a>
         </nav>
         <div class="spacer"></div>
     </header>
