--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,7 @@
         <section>
             <div class="container">
                 <div class="conteudo__img">
-                    <img src="img/xls 2.2 diesel.jpg" alt="Imagem Carro Ford XLS 2.2 Diesel">
+                    <img src="img/xls 2.2 diesel.jpg" alt="Imagem Carro Ford XLS 2.2 Diesel Vermelho">
                 </div>
                 <div class="conteudo__formulario">
                     <h1>Sobre Você</h1>
