--- a/lancamento.html
+++ b/lancamento.html
@@ -36,7 +36,8 @@
                 <table>
                     <tr>
                         <th class="carro__img">
-                            <label for="xl_cabine"><img src="img/XL Cabine.jpg" alt=""></label>
+                            <label for="xl_cabine"><img src="img/XL Cabine.jpg" alt="Imagem Carro Ford XL Cabine Vermelho">
+                            </label>
                         </th>
                     </tr>
                     <tr class="checkbox">
@@ -50,7 +51,7 @@
                             </div>
                             <div class="img__info">
                                 <a href="">
-                                    <img src="img/info.png" alt="">
+                                    <img src="img/info.png" alt="Icone de informação do carro XL Cabine">
                                 </a>
                             </div>
                         </td>
@@ -60,7 +61,7 @@
                     <tr>
                         <th>
                             <label for="xls">
-                                <img src="img/xls 2.2 diesel.jpg" alt="">
+                                <img src="img/xls 2.2 diesel.jpg" alt="Imagem Carro Ford XLS 2.2 Diesel Vermelho">
                             </label>
                         </th>
                     </tr>
@@ -78,7 +79,7 @@
                             </div>
                             <div class="img__info">
                                 <a href="">
-                                    <img src="img/info.png" alt="">
+                                    <img src="img/info.png" alt="Icone de informação do carro XL Cabine">
                                 </a>
                             </div>
                         </td>
@@ -88,7 +89,7 @@
                     <tr>
                         <th>
                             <label for="storm">
-                                <img src="img/storm.jpg" alt="">
+                                <img src="img/storm.jpg" alt="Imagem Carro Ford Storm Vermelho">
                             </label>
                         </th>
                     </tr>
@@ -106,7 +107,7 @@
                             </div>
                             <div class="img__info">
                                 <a href="">
-                                    <img src="img/info.png" alt="">
+                                    <img src="img/info.png" alt="Icone de informação do carro XL Cabine">
                                 </a>
                             </div>
                         </td>
