--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         <div class="spacer"></div>
     </header>
     <main class="conteudo">
-        <a href="lancamento.html">
-            <div class="conteudo__img">
-                <img src="img/imagem_1.jpg" alt="Foto Ranger Black Ford">
-            </div>
-        </a>
+        <div class="conteudo__img">
+            <a href="lancamento.html"><img src="img/imagem_1.jpg" alt="Foto Ranger Black Ford"></a>
+        </div>
         <p class="conteudo__texto">Esta é a nova Ranger Ford 2022. Verifique novidades <a href="lancamento.html">aqui</a></p>
     </main>
     <footer class="rodape">
